--- a/views/index.ejs
+++ b/views/index.ejs
@@ -18,6 +18,7 @@
 
 
         <div class="fade-in-bottom">        
+            <h2 style="text-align: left; color: black; margin-bottom: 1rem; font-size: 1.5rem;">Create Flashcards</h2>
             <form hx-post="/submit-form" hx-target="#uuid-message">
                 <div id="form-rows">
                     <!-- Initial form row -->
